
  * Built-in filename extension to syntax mapping updates:
    dtx -> tex, latex -> tex,  sage -> python.

  * Replace reports the number of replacements (again).
  
  * Enter in Help places you on the right command in the command list.

  * Now the global directory is displayed even if it is not found.
	
  * Aborting an OpenNew doesn't leave you in a new blank document.
  
  * AdjustView now takes optional number of lines or columns to adjust by.
  
  * Read .keys and possibly .menus files from NE_GLOBAL_DIR on startup.

  * More defensive reading of lines/columns from terminfo to avoid crashes
    with XTerm on Mac OS X.

  * More portable and robust window-size change detection.

Changes from version 2.0.2

---- Bug fixes ----

  * Still better file handling for the THROUGH command.

  * Visual glitches appearing on Cygwin have been fixed.

Changes from version 2.0.1

---- Bug fixes ----

  * The file names for the THROUGH command were being generated
    correctly, but in the current directory instead of P_tmpdir.

  * The built-in ANSI escape sequences had a glitch that could cause
    some visual inconsistencies.

Changes from version 2.0

---- Bug fixes ----

  * The file names for the THROUGH command were being generated
    incorrectly.

Changes from version 1.43

---- Improvements ----

  * We got syntax highlighting! Thanks to Daniele Filaretti, whose undergrad
    thesis was about porting joe's syntax highlighting system to ne.

  * Billions of small improvements and cleanups.

Changes from version 1.42

---- Bug fixes ----

  * Finally fixed the BSD exit problem (ESC would kill ne on BSD and
    derivated operating systems). The problem lay in a slight difference
    between Linux and BSD in the getc() implementation (thanks to Alessio
    Orlandi for isolating the problem and finding a fix).

  * An eccess in loop counter increment would prevent alphabetic
    menu search to work under certain circumstances (thanks to